# blockperf

./: .gitignore  Dockerfile  README.md  TODO.md  blockperf.ini  blockperf.ini.example  client_connect_listen.py  client_connect_publish.py  flake.nix  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: nix.yml
contrib/: blockperf.default  blockperf.env  blockperf.ini  blockperf.service  readjournal.py
src/blockperf/: __init__.py  app.py  blocklog.py  blocksample.py  blocktrace.py  cli.py  config.py  exceptions.py  logevent.py  logger.yaml  metrics.py  mqtt.py  nodelogs.py  producer.py  sampling.py  tracing.py
src/blockperf/commands/: check.py  run.py
tests/: test_blocksample.py  test_config.py  test_logevent.py  test_nodelogs.py
