[project]
name = "blockperf"
# https://www.python.org/dev/peps/pep-0440/
# https://packaging.python.org/guides/single-sourcing-package-version/
dynamic = ["version"]

description = "Cardano blockperf.sh rewritten python"
# readme = "README.md" # Optional

requires-python = ">=3.10"


license = {file = "LICENSE"}
keywords = ["cardano", "setuptools", "development", "blockperf", "spo"]

authors = [
  {name = "Manuel Schmidt", email = "manuel.schmidt@cardanofoundation.org" }
]

maintainers = [
  {name = "Manuel Schmidt", email = "manuel.schmidt@cardanofoundation.org" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "paho-mqtt==1.6.1",
  "psutil==5.9.6",
]

[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/cardano-foundation/blockperf"
"Bug Reports" = "https://github.com/cardano-foundation/blockperf/issues"
"Source" = "https://github.com/cardano-foundation/blockperf/"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
blockperf = "blockperf.cli:main"

[tool.setuptools.dynamic]
version = {attr = "blockperf.__version__"}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

